--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,43 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: Welcome to the Vibe Coding Stack
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+# React .NET Templates
 
-## What is Next?
+**Vibe Coding** is a new paradigm for building web applications, combining the best-in-class technologies for a developer experience that feels like magic.
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
-</Cards>
+It leverages the power of **AI-Generated Development** with a stack that is optimized for code generation, type safety, and performance.
+
+## The Vibe Stack
+
+The "Vibe Stack" consists of:
+
+- **React**: The library for web and native user interfaces.
+- **Tailwind CSS**: A utility-first CSS framework for rapid UI development.
+- **TypeScript**: A strongly typed programming language that builds on JavaScript.
+- **ServiceStack**: A high-performance .NET framework for building industrial-strength backends.
+
+## Why Vibe Coding?
+
+### AI-Optimized
+The combination of React, Tailwind, and TypeScript is widely recognized as the optimal target for LLM code generation. The declarative nature of React and the utility classes of Tailwind allow AI to generate complete, styled components with high accuracy.
+
+### Type-Safe End-to-End
+ServiceStack extends TypeScript's type safety to the network boundary. With **Add ServiceStack Reference**, you get instant, typed DTOs for your API, ensuring that your frontend and backend are always in sync.
+
+### Industrial Strength
+While the frontend is built for speed and flexibility, the backend is built for stability and performance. ServiceStack provides a mature, feature-rich foundation for your applications, including:
+
+- **AutoQuery**: Instant APIs for your data.
+- **Auth**: Built-in authentication and authorization.
+- **Validation**: Fluent validation for your request DTOs.
+- **Messaging**: Background jobs and message queues.
+
+## Get Started
+
+Explore our templates to find the perfect starting point for your next project.
+
+- [Next.js Static](/docs/templates/next-static) - Best for SSG and SEO.
+- [React Static](/docs/templates/react-static) - Best for SPAs and internal apps.
+- [Next.js RSC](/docs/templates/next-rsc) - Best for modern, server-rendered React apps.
