--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: Welcome to the Vibe Coding Stack
 ---
 
-# React .NET Templates
+# .NET React Templates
 
 **Vibe Coding** is a new paradigm for building web applications, combining the best-in-class technologies for a developer experience that feels like magic.
 
