--- a/content/docs/templates/next-rsc.mdx
+++ b/content/docs/templates/next-rsc.mdx
@@ -27,7 +27,7 @@ React Server Components allow you to keep sensitive logic and large dependencies
 Generate a new project:
 
 ```bash
-x new next-rsc ProjectName
+npx create-net next-rsc ProjectName
 ```
 
 ### Development
