--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -5,6 +5,140 @@ description: Welcome to the Vibe Coding Stack
 
 # .NET React Templates
 
+## First-Class React + Tailwind for AI-First Development
+
+We're witnessing a fundamental shift in how applications are built. AI code generation has evolved from a novelty to a productivity multiplier that's become too significant to ignore. While AI models still require oversight for production backend systems, they excel at generating frontend UIs—compressing development timelines that once took months into days.
+
+## The Rise of Vibe Coding
+
+AI can now generate complete, production-ready UI code. This enables an entirely new development workflow that [Andrej Karpathy](https://en.wikipedia.org/wiki/Andrej_Karpathy) has termed ["Vibe Coding"](https://en.wikipedia.org/wiki/Vibe_coding)—where developers iteratively guide AI agents to implement features through natural language instructions, where features can be iteratively prototyped, refined and improved within seconds instead of hours.
+
+This AI-first approach is rapidly maturing, with tools like [Cursor](https://cursor.com), [Claude Code](https://www.claude.com/product/claude-code), and [Codex](https://chatgpt.com/features/codex/) becoming the preferred platforms for this new paradigm with new tools designed to get maximum effectiveness of AI models with sophisticated planning
+tools, focused models optimized for code generation and edits and agentic workflows that's able to solidifying each new feature iteration with tests, along with detailed documentation, planning, migrations and usage guides.
+
+## React & Tailwind: The AI Development Standard
+
+React and Tailwind have emerged as the de facto standards for AI-generated UIs. Every major platform for generating applications from prompts has converged on this stack including
+[Replit](https://blog.replit.com/react),
+[Lovable](https://lovable.dev/blog/best-tailwind-css-component),
+[Google's AI Studio](https://aistudio.google.com),
+[Vercel's v0](https://v0.app) and [Claude Code Web](https://claude.ai/code).
+
+### TypeScript
+
+Whilst TypeScript is often excluded in one-prompt solutions catering to non-developers, it's still a critical part of the AI development workflow. It provides a type system that helps AI models generate more accurate and maintainable code and TypeScript's static analysis also helps identify errors in the generated code which AI Models have have become really good at correcting—as such it's an integral part in all our React templates.
+
+## How ServiceStack Excels in AI-First Development
+
+Context is king when developing with AI models. The better the context, the higher the quality of generated code
+and ServiceStack's architecture is uniquely suited for AI-assisted development:
+
+### Declarative Typed APIs
+
+All ServiceStack APIs follow a flat, declarative structure—The contract is explicit and consistent and LLMs don't need to guess what APIs accept or return.
+
+### End-to-End Type Safety
+
+Context quality directly impacts generated code quality. ServiceStack's TypeScript integration provides complete static analysis of what APIs accept, return, and how to bind responses—giving AI models the full context they need.
+The static analysis feedback also directs models to identify and correct any errors in the generated code.
+
+### Zero-Ambiguity Integration
+
+AI models thrive on consistency. ServiceStack removes guesswork with a single pattern for all API calls:
+- One generic `JsonServiceClient` for all APIs
+- Consistent methods used to send all requests
+- Consistent Typed Request DTO → Response DTO flow
+- Uniform error handling
+
+### Intuitive Project Structure
+
+ServiceStack's [physical project structure](/physical-project-structure) provides clear separation of concerns, with the entire API surface area contained in [the ServiceModel project](/physical-project-structure#servicemodel-project)—making codebases easy for AI models to navigate and understand.
+
+### Minimal Code Surface
+
+Less code means fewer opportunities for errors. ServiceStack's high-productivity features minimize the code AI needs to generate:
+
+- **[AutoQuery APIs](/docs/autoquery/querying)** - Flexible, queryable APIs defined with just a Request DTO
+- **[AutoQueryGrid Component](https://react.servicestack.net/gallery/autoquerygrid)** - Complete CRUD UIs in 1 line of code
+- **[Auto Form Components](https://react.servicestack.net/gallery/autoform)** - Beautiful, validation-bound forms in 1 line of code
+
+These components are ideal for rapidly building backend management interfaces, freeing developers to focus on differentiating customer-facing features.
+
+
+## Modern React Project Templates
+
+We're introducing three production-ready React templates, each optimized for different use cases:
+
+<div className="mt-16 mb-28">
+    <ReactTemplates names={["react-static", "next-static", "next-rsc"]} />
+</div>
+
+### React Template Descriptions
+
+ - **react-static** - Minimal foundation for a classic Single Page Application (SPA) statically generated by Vite. Perfect for dashboards, internal tools, admin panels, and highly interactive apps where SEO isn't a priority.
+ - **next-static** - A Lightweight statically generated Next.js React + TypeScript + Tailwind CSS App. Ideal for marketing sites, landing pages, blogs, and content-focused sites that benefit from file-based routing and SEO.
+ - **next-rsc** - The cutting edge of React. Leverage full Next.js React Server Components to access .NET APIs directly on the server, reducing bundle size and improving performance.
+
+## Comprehensive React Component Library
+
+All three templates leverage our new [React Component Gallery](https://react.servicestack.net)—a high-fidelity port of our proven [Vue Component Library](/vue/) and [Blazor Component Library](https://blazor.servicestack.net). This comprehensive collection provides everything needed to build highly productive, modern and responsive web applications.
+
+```
+:::{.not-prose}
+:::{.my-8 .max-w-3xl .mx-auto .rounded-lg .overflow-hidden .shadow .hover:shadow-xl}
+[![](/img/react-gallery.webp)](https://react.servicestack.net)
+:::
+:::
+```
+
+Switch to Dark Mode to see how all components looks in Dark Mode:
+
+```
+:::{.not-prose}
+:::{.my-8 .max-w-3xl .mx-auto .rounded-lg .overflow-hidden .shadow .hover:shadow-xl}
+[![](/img/react-gallery-dark.webp)](https://react.servicestack.net)
+:::
+:::
+```
+
+ServiceStack's first-class React support positions your applications at the forefront of AI-assisted development. With declarative APIs, complete type safety, and minimal boilerplate, you can leverage AI code generation with confidence while maintaining the quality and maintainability your production systems demand.
+
+## TypeScript Data Models
+
+As AI Models are not as adept at generating C# APIs or Migrations yet, they excel at generating TypeScript code, which our 
+[TypeScript Data Models](/autoquery/okai-models) feature can take advantage of by generating all the C# AutoQuery CRUD APIs and DB Migrations needing to support it.
+
+With just a TypeScript Definition:
+
+- [Bookings.d.ts](https://github.com/NetCoreTemplates/react-static/blob/main/MyApp.ServiceModel/Bookings.d.ts)
+
+We can generate all the AutoQuery CRUD APIs and DB Migrations needed to enable a CRUD UI with:
+
+```bash
+npx okai Bookings.d.ts
+```
+
+This is enough to generate a complete CRUD UI to manage Bookings 
+in your React App with the [React AutoQueryGrid Component](https://react.servicestack.net/gallery/autoquerygrid).
+or with ServiceStack's built-in [Locode UI](/locode/):
+
+```
+:::{.not-prose}
+:::{.my-8 .max-w-3xl .mx-auto .rounded-lg .overflow-hidden .shadow .hover:shadow-xl}
+[![](/img/bookings-locode.webp)](/locode/)
+:::
+:::
+```
+
+
+All this to say that this new development model exists today, and given its significant productivity gains, it's 
+very likely to become the future of software development, especially for UIs. Since developers are no longer
+the primary authors of code, our UI choices swing from Developer preferences to UI technologies that AI models
+excel at.
+
+So whilst we have a preference for Vue given it's more readable syntax and progressive enhancement capabalities, and despite the .NET ecosystem having a strong bias towards Blazor, we're even more excited for the future of React and are committed to providing the best possible support for it.
+
+
 **Vibe Coding** is a new paradigm for building web applications, combining the best-in-class technologies for a developer experience that feels like magic.
 
 It leverages the power of **AI-Generated Development** with a stack that is optimized for code generation, type safety, and performance.
