--- a/content/docs/templates/next-rsc.mdx
+++ b/content/docs/templates/next-rsc.mdx
@@ -1,45 +1,186 @@
 ---
 title: Next.js RSC
-description: The next-rsc template for Vibe Coding
+description: Full Next.js React Server Components UI with .NET 10 Identity Auth Template back-end APIs
 ---
 
-# Next.js RSC Template
+# .NET 10 Next.js RSC Identity Auth Template
 
-The `next-rsc` template leverages React Server Components (RSC) to bring the power of the server to your React components. It's the cutting edge of React development, integrated seamlessly with ServiceStack.
+import TemplateIntro from '@/components/template-intro';
 
-## Features
+A modern full-stack .NET 10.0 + Next.js 16 project template that combines the power of ServiceStack with Next.js static site generation and React 19. It provides a production-ready foundation for building scalable web applications with integrated authentication, database management, and background job processing.
 
-- **React Server Components**: Fetch data directly in your components on the server.
-- **Next.js App Router**: The latest routing paradigm from Next.js.
-- **ServiceStack Integration**: Call your .NET services directly from Server Components.
-- **Hybrid Rendering**: Mix server and client components for the best of both worlds.
+<TemplateIntro 
+  image="https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/main/MyApp/wwwroot/img/pages/react/next-rsc.webp"
+  repo="https://github.com/NetCoreTemplates/next-rsc"
+  demo="https://next-rsc.react-templates.net"
+  name="Next.js RSC Template"
+/>
 
-## Why RSC?
 
-React Server Components allow you to keep sensitive logic and large dependencies on the server, sending only the necessary HTML and minimal JavaScript to the client. This results in:
+## Quick Start
 
-- **Smaller Bundle Sizes**: Less JS to download and parse.
-- **Faster First Contentful Paint (FCP)**: Content is rendered on the server.
-- **Simplified Data Fetching**: No need for `useEffect` or complex state management for initial data.
+```bash
+npx create-net next-rsc MyProject
+```
 
 ## Getting Started
 
-Generate a new project:
+Run Server .NET Project (automatically starts both .NET and Next.js dev servers):
 
 ```bash
-npx create-net next-rsc ProjectName
-```
-
-### Development
-
-As with other templates, use `dotnet watch` to start the unified development experience.
-
-```bash
+cd MyProject
 dotnet watch
 ```
 
+## Architecture
+
+### Unified Proxy Architecture
+
+This template uses a consistent architecture across all environments where the .NET application always proxies requests to a full-featured Next.js server:
+
+**Development Mode:**
+
+![](https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/refs/heads/main/MyApp/wwwroot/img/pages/react/info/next-rsc-dev.svg)
+
+- ASP.NET Core proxies requests to Next.js dev server (running on port 3000)
+- Hot Module Replacement (HMR) support for instant UI updates
+- WebSocket proxying for Next.js HMR functionality
+- Automatic startup of Next.js dev server in `dotnet watch`
+
+**Production Mode:**
+
+![](https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/refs/heads/main/MyApp/wwwroot/img/pages/react/info/next-rsc-prod.svg)
+
+- Full Next.js capabilities including React Server Components and dynamic rendering
+- Single container deployment with coordinated process management
+- Both .NET and Node servers run side-by-side in the same unified Docker container
+- ASP.NET Core proxies requests to Next.js production server (running on port 3000)
+- Static file responses cached in `NodeProxy` in-memory managed cache for optimal performance
+
+## Core Technologies
+
+### Frontend (Next.js 16 + React 19)
+- **Next.js** with static export capability
+- **Tailwind CSS 4.x** - Utility-first styling with PostCSS
+- **TypeScript** - Type-safe development
+- **Vitest** - Modern testing framework
+- **ServiceStack React Components** - Pre-built UI components
+
+### .NET Frontend (Integrated + Optional)
+- **Razor Pages** - For Identity Auth UI (`/Identity` routes)
+
+### Backend (.NET 10.0)
+- **ServiceStack 10.x** - High-performance web services framework
+- **ASP.NET Core Identity Auth** - Complete authentication & authorization system
+- **Entity Framework Core** - For Identity Auth data management
+- **OrmLite** - ServiceStack's fast, lightweight Typed ORM
+- **SQLite** - Default database (easily upgradable to PostgreSQL/SQL Server/MySQL)
+
+## Major Features
+
+### 1. Authentication & Authorization
+- ASP.NET Core Identity integration with role-based access control
+- Custom user sessions with additional claims
+- Admin users feature for user management at `/admin-ui/users`
+- Email confirmation workflow (configurable SMTP)
+- Razor Pages for Identity UI (`/Identity` routes)
+- Credentials-based authentication
+
+### [2. AutoQuery CRUD](#autoquery-crud-dev-workflow)
+- Declarative API development with minimal code
+- Complete Auth-protected CRUD operations (see Bookings example at `/bookings-auto`)
+- Automatic audit trails (created/modified/deleted tracking)
+- Built-in validation and authorization
+- Type-safe TypeScript DTOs auto-generated from C# models
+
+### 3. Background Jobs
+- `BackgroundsJobFeature` for async task processing
+- Command pattern for job execution
+- Email sending via background jobs
+- Recurring job scheduling support
+- Upgradable to `DatabaseJobsFeature` for enterprise RDBMS
+
+### 4. Developer Experience
+- **Admin UI** at `/admin-ui` for App management
+- **Health checks** at `/up` endpoint
+- **Modular startup** configuration pattern
+- **Code-first migrations** with OrmLite
+- **Docker support** with container publishing
+- **Kamal deployment** configuration included
+
+### 5. Production Features
+- Static asset caching with intelligent cache invalidation
+- Clean URLs without `.html` extensions
+- HTTPS redirection and HSTS
+- Data protection with persistent keys
+- Health monitoring
+- Database developer page for EF Core errors
+
+## Project Structure
+
+```
+MyApp/                       # Main ASP.NET Core host
+├── Configure.*.cs           # Modular startup configuration
+├── Program.cs               # Application entry point
+└── wwwroot/                 # Static files (production)
+
+MyApp.Client/                # Next.js frontend application
+├── app/                     # Next.js App Router pages
+├── components/              # React components
+├── lib/                     # Utilities and helpers
+├── public/                  # Static assets
+└── dist/                    # Build output (production)
+
+MyApp.ServiceInterface/      # Service implementations
+├── MyServices.cs            # Example services
+└── Data/                    # EF Core DbContext
+
+MyApp.ServiceModel/          # DTOs and service contracts
+├── Bookings.cs              # AutoQuery CRUD example
+└── Hello.cs                 # Example service contract
+
+MyApp.Tests/                 # Integration and unit tests
+
+config/                      # Deployment configuration
+└── deploy.yml               # Kamal deployment settings
+
+.github/                     # GitHub Actions workflows
+└── workflows/
+    ├── build.yml            # CI build and test
+    ├── build-container.yml  # Container image build
+    └── release.yml          # Production deployment with Kamal
+```
+
+## Development Workflow
+
+For detailed information on the development workflow, including starting development servers, generating TypeScript DTOs, database migrations, and testing, see:
+
+**[Development Workflow Documentation](/autoquery/dev-workflow)**
+
+## Configuration
+
+For detailed configuration information, including app settings, SMTP email setup, and upgrading to enterprise databases (PostgreSQL/SQL Server/MySQL), see:
+
+**[Configuration Documentation](/configuration)**
+
+## Deployment
+
+For deployment instructions, including Docker + Kamal setup and GitHub Actions configuration, see:
+
+**[Deployment Documentation](/deployment)**
+
+## Ideal Use Cases
+
+- SaaS applications requiring authentication
+- Admin dashboards with CRUD operations
+- Content-driven sites with dynamic APIs
+- Applications needing background job processing
+- Projects requiring both SSG benefits and API capabilities
+- Teams wanting type-safety across full stack
+
 ## Learn More
 
-This template is perfect for developers who want to stay ahead of the curve and utilize the latest React features while maintaining a robust .NET backend.
-
-[View Source on GitHub](https://github.com/NetCoreTemplates/next-rsc)
+- [ServiceStack Documentation](https://docs.servicestack.net)
+- [Next.js Documentation](https://nextjs.org/docs)
+- [AutoQuery CRUD](https://docs.servicestack.net/autoquery-crud)
+- [ServiceStack Auth](https://docs.servicestack.net/authentication-and-authorization)
