--- a/content/docs/templates/react-static.mdx
+++ b/content/docs/templates/react-static.mdx
@@ -1,46 +1,234 @@
 ---
 title: React Static
-description: The react-static template for Vibe Coding
+description: React + Vite + TypeScript + Tailwind CSS project template with ServiceStack .NET backend
 ---
 
-# React Static Template
+# .NET 10 React Static Template
 
-The `react-static` template offers a classic Single Page Application (SPA) experience, optimized for productivity and simplicity. It uses Vite for fast builds and hot module replacement.
+import TemplateIntro from '@/components/template-intro';
 
-## Features
+A modern full-stack .NET 10.0 + React Vite project template that combines the power of ServiceStack with React Vite static site generation and React 19. It provides a production-ready foundation for building scalable web applications with integrated authentication, database management, and background job processing.
 
-- **Vite**: Lightning-fast dev server and bundler.
-- **React SPA**: Client-side routing and rendering.
-- **ServiceStack Backend**: Robust .NET 8 API.
-- **Tailwind CSS**: Modern styling.
-- **TypeScript**: Typed DTOs and components.
+<TemplateIntro 
+  image="https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/main/MyApp/wwwroot/img/pages/react/react-static.webp"
+  repo="https://github.com/NetCoreTemplates/react-static"
+  demo="http://react-static.web-templates.io"
+  name="React Static Template"
+/>
 
-## Ideal Use Cases
+## Quick Start
 
-- **Dashboards**: Admin panels and internal tools.
-- **SaaS Applications**: Rich, interactive web apps.
-- **Mobile Wrappers**: Apps that need to be wrapped for mobile stores.
+```bash
+npx create-net react-static MyProject
+```
 
 ## Getting Started
 
-Create a new project:
+Run Server .NET Project (automatically starts both .NET and Vite React dev servers):
 
 ```bash
-npx create-net react-static ProjectName
-```
-
-### Development
-
-Start the development environment:
-
-```bash
+cd MyProject
 dotnet watch
 ```
 
-This command spins up the ASP.NET Core backend and the Vite dev server.
-
 ## Architecture
 
-In production, the React app is built into static files and served directly by the ASP.NET Core Kestrel server, simplifying deployment to a single binary or container.
+### Hybrid Development Approach
 
-[View Source on GitHub](https://github.com/NetCoreTemplates/react-static)
+**Development Mode:**
+
+![](https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/refs/heads/main/MyApp/wwwroot/img/pages/react/info/react-static-dev.svg)
+
+- ASP.NET Core proxies requests to Vite dev server (running on port 5173)
+- Hot Module Replacement (HMR) support for instant UI updates
+- WebSocket proxying for Vite HMR functionality
+
+**Production Mode:**
+
+![](https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/refs/heads/main/MyApp/wwwroot/img/pages/react/info/react-static-prod.svg)
+
+- Vite React app is statically exported to `/dist`
+- Static files served directly from ASP.NET Core's `/wwwroot`
+- No separate Node.js server required in production
+
+## Core Technologies
+
+### Frontend
+
+- **React 19** - A JavaScript library for building user interfaces
+- **Vite 7** - Next Generation Frontend Tooling
+- **Tailwind CSS v4** - CSS-first configuration with `@tailwindcss/vite` plugin
+- **TypeScript 5** - JavaScript with syntax for types
+- **Vitest** - Modern testing framework
+- **ServiceStack React Components** - Pre-built UI components
+
+### .NET Frontend (Integrated + Optional)
+- **Razor Pages** - For Identity Auth UI (`/Identity` routes)
+
+### Backend (.NET 10.0)
+- **ServiceStack 10.x** - High-performance web services framework
+- **ASP.NET Core Identity** - Complete authentication & authorization system
+- **Entity Framework Core** - For Identity data management
+- **OrmLite** - ServiceStack's fast, lightweight Typed ORM for application data
+- **SQLite** - Default database (easily upgradable to PostgreSQL/SQL Server/MySQL)
+
+## Major Features
+
+### 1. Authentication & Authorization
+- ASP.NET Core Identity integration with role-based access control
+- Custom user sessions with additional claims
+- Admin users feature for user management at `/admin-ui/users`
+- Email confirmation workflow (configurable SMTP)
+- Razor Pages for Identity UI (`/Identity` routes)
+- Credentials-based authentication
+
+### [2. AutoQuery CRUD](#autoquery-crud-dev-workflow)
+- Declarative API development with minimal code
+- Complete Auth-protected CRUD operations (see Bookings example at `/bookings-auto`)
+- Automatic audit trails (created/modified/deleted tracking)
+- Built-in validation and authorization
+- Type-safe TypeScript DTOs auto-generated from C# models
+
+### 3. Background Jobs
+- `BackgroundsJobFeature` for async task processing
+- Command pattern for job execution
+- Email sending via background jobs
+- Recurring job scheduling support
+- Upgradable to `DatabaseJobsFeature` for enterprise RDBMS
+
+### 4. Developer Experience
+- **Admin UI** at `/admin-ui` for App management
+- **Health checks** at `/up` endpoint
+- **Modular startup** configuration pattern
+- **Code-first migrations** with OrmLite
+- **Docker support** with container publishing
+- **Kamal deployment** configuration included
+
+### 5. Production Features
+- Static asset caching with intelligent cache invalidation
+- Clean URLs without `.html` extensions
+- HTTPS redirection and HSTS
+- Data protection with persistent keys
+- Health monitoring
+- Database developer page for EF Core errors
+
+## Project Structure
+
+```
+├── MyApp/                      # .NET Backend
+│   ├── Configure.*.cs          # Modular AppHost configuration
+│   ├── Migrations/             # EF Core & OrmLite migrations
+│   ├── Program.cs              # Application entry point
+│   └── wwwroot/                # Static files (production build)
+│
+├── MyApp.Client/               # React Frontend
+│   ├── src/
+│   │   ├── components/         # React components
+│   │   ├── lib/
+│   │   │   ├── dtos.ts         # Auto-generated TypeScript DTOs
+│   │   │   ├── gateway.ts      # ServiceStack API client
+│   │   │   └── utils.ts        # Utility functions
+│   │   ├── styles/
+│   │   │   └── index.css       # Tailwind CSS styles
+│   │   ├── App.tsx             # Main App component
+│   │   └── main.tsx            # Application entry point
+│   ├── vite.config.ts          # Vite configuration
+│   └── package.json            # NPM dependencies
+│
+├── MyApp.ServiceInterface/     # Service implementations
+├── MyApp.ServiceModel/         # DTOs & API definitions
+├── MyApp.Tests/                # Integration & unit tests
+└── config/
+│   └── deploy.yml              # Kamal deployment configuration
+│──.github/                     # GitHub Actions workflows
+└── workflows/
+    ├── build.yml               # CI build and test
+    ├── build-container.yml     # Container image build
+    └── release.yml             # Production deployment with Kamal
+```
+
+## Development Workflow
+
+For detailed information on the development workflow, including starting development servers, generating TypeScript DTOs, database migrations, and testing, see:
+
+**[Development Workflow Documentation](/autoquery/dev-workflow)**
+
+## Configuration
+
+For detailed configuration information, including app settings, SMTP email setup, and upgrading to enterprise databases (PostgreSQL/SQL Server/MySQL), see:
+
+**[Configuration Documentation](/configuration)**
+
+## Deployment
+
+For deployment instructions, including Docker + Kamal setup and GitHub Actions configuration, see:
+
+**[Deployment Documentation](/deployment)**
+
+## AutoQuery CRUD Dev Workflow
+
+For Rapid Development simple [TypeScript Data Models](https://docs.servicestack.net/autoquery/okai-models) can be used to generate C# AutoQuery APIs and DB Migrations.
+
+### Cheat Sheet
+
+Create a new Table use `init <Table>`, e.g:
+
+```bash
+npx okai init Table
+```
+
+This will generate an empty `MyApp.ServiceModel/<Table>.d.ts` file along with stub AutoQuery APIs and DB Migration implementations. 
+
+#### Regenerate AutoQuery APIs and DB Migrations
+
+After modifying the TypeScript Data Model to include the desired fields, re-run the `okai` tool to re-generate the AutoQuery APIs and DB Migrations:
+
+```bash
+npx okai Table.d.ts
+```
+
+> Command can be run anywhere within your Solution
+
+After you're happy with your Data Model you can run DB Migrations to run the DB Migration and create your RDBMS Table:
+
+```bash
+npm run migrate
+```
+
+#### Making changes after first migration
+
+If you want to make further changes to your Data Model, you can re-run the `okai` tool to update the AutoQuery APIs and DB Migrations, then run the `rerun:last` npm script to drop and re-run the last migration:
+
+```bash
+npm run rerun:last
+```
+
+#### Removing a Data Model and all generated code
+
+If you changed your mind and want to get rid of the RDBMS Table you can revert the last migration:
+
+```bash
+npm run revert:last
+```
+
+Which will drop the table and then you can get rid of the AutoQuery APIs, DB Migrations and TypeScript Data model with:
+
+```bash
+npx okai rm Transaction.d.ts
+```
+
+## Ideal Use Cases
+
+- SaaS applications requiring authentication
+- Admin dashboards with CRUD operations
+- Content-driven sites with dynamic APIs
+- Applications needing background job processing
+- Projects requiring both SSG benefits and API capabilities
+- Teams wanting type-safety across full stack
+
+## Learn More
+
+- [ServiceStack Documentation](https://docs.servicestack.net)
+- [React Documentation](https://react.dev)
+- [AutoQuery CRUD](https://docs.servicestack.net/autoquery-crud)
+- [ServiceStack Auth](https://docs.servicestack.net/authentication-and-authorization)
