--- a/content/docs/templates/react-spa.mdx
+++ b/content/docs/templates/react-spa.mdx
@@ -12,7 +12,7 @@ A modern full-stack .NET 10.0 + Vite React 19 SPA project template that combines
 <TemplateIntro 
   image="https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/main/MyApp/wwwroot/img/pages/react/react-spa.webp"
   repo="https://github.com/NetCoreTemplates/react-spa"
-  demo="http://react-spa.web-templates.io"
+  demo="http://react-spa.react-templates.net"
   name="React SPA Template"
 />
 
