--- a/content/docs/templates/react-static.mdx
+++ b/content/docs/templates/react-static.mdx
@@ -12,7 +12,7 @@ A modern full-stack .NET 10.0 + React Vite project template that combines the po
 <TemplateIntro 
   image="https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/main/MyApp/wwwroot/img/pages/react/react-static.webp"
   repo="https://github.com/NetCoreTemplates/react-static"
-  demo="http://react-static.web-templates.io"
+  demo="http://react-static.react-templates.net"
   name="React Static Template"
 />
 
