--- a/content/docs/templates/nextjs.mdx
+++ b/content/docs/templates/nextjs.mdx
@@ -3,7 +3,7 @@ title: Next.js App
 description: Full-featured Next.js Static Export Identity Auth Template
 ---
 
-# .NET 10 Full-featured Next.js Static Export Identity Auth Template
+# .NET 10 Full-featured Next.js Static Export Template
 
 import TemplateIntro from '@/components/template-intro';
 
