--- a/content/docs/templates/react-spa.mdx
+++ b/content/docs/templates/react-spa.mdx
@@ -3,11 +3,13 @@ title: React SPA
 description: Full-featured Vite React SPA with .NET 10 Identity Auth Template
 ---
 
-# .NET 10 Full-featured Vite React SPA Identity Auth Template
+# .NET 10 Full-featured Vite React SPA Template
 
 import TemplateIntro from '@/components/template-intro';
 
-A modern full-stack .NET 10.0 + Vite React 19 SPA project template that combines the power of ServiceStack with a fast Vite-powered React development experience. It provides a production-ready foundation for building scalable web applications with integrated authentication, database management, and background job processing.
+A modern full-stack .NET 10 + Vite React 19 SPA project template that combines the power of ServiceStack 
+with a fast Vite-powered React development experience. It provides a production-ready foundation for building 
+scalable web applications with integrated authentication, background job processing, and built-in Admin.
 
 <TemplateIntro 
   image="https://raw.githubusercontent.com/ServiceStack/docs.servicestack.net/main/MyApp/wwwroot/img/pages/react/react-spa.webp"
